--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/core",
-  "version": "2.5.6",
+  "version": "2.5.8",
   "description": "Super-fast validation decorators of NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -36,19 +36,23 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/fetcher": "^2.5.6",
+    "@nestia/fetcher": "^2.5.8",
+    "@nestjs/common": ">=7.0.1",
+    "@nestjs/core": ">=7.0.1",
     "detect-ts-node": "^1.0.5",
     "glob": "^7.2.0",
     "multer": "1.4.5-lts.1",
-    "raw-body": "^2.5.2",
-    "rxjs": "^7.8.1",
+    "raw-body": "^2.0.0",
+    "reflect-metadata": ">=0.1.12",
+    "rxjs": ">=6.0.0",
     "typia": "^5.4.5"
   },
   "peerDependencies": {
-    "@nestia/fetcher": ">=2.5.6",
+    "@nestia/fetcher": ">=2.5.8",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "reflect-metadata": ">=0.1.12",
+    "rxjs": ">=6.0.0",
     "typia": ">=5.4.5 <6.0.0"
   },
   "devDependencies": {
@@ -68,7 +72,6 @@
     "fastify": "^4.25.2",
     "git-last-commit": "^1.0.1",
     "inquirer": "^8.2.5",
-    "raw-body": "^2.5.2",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
     "ts-patch": "^3.1.0",
