--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/sdk",
-  "version": "2.5.6",
+  "version": "2.5.8",
   "description": "Nestia SDK and Swagger generator",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -32,44 +32,39 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/fetcher": "^2.5.6",
+    "@nestia/fetcher": "^2.5.8",
     "cli": "^1.0.1",
     "get-function-location": "^2.0.0",
     "glob": "^7.2.0",
     "path-to-regexp": "^6.2.1",
-    "reflect-metadata": ">=0.1.12",
+    "prettier": "^3.2.5",
     "tsconfck": "^2.0.1",
     "tsconfig-paths": "^4.1.1",
+    "ts-node": ">=10.6.0",
     "tstl": "^2.5.13",
     "typia": "^5.4.5"
   },
   "peerDependencies": {
-    "@nestia/fetcher": ">=2.5.6",
+    "@nestia/fetcher": ">=2.5.8",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
-    "prettier": ">=2.0.0",
     "reflect-metadata": ">=0.1.12",
     "ts-node": ">=10.6.0",
     "typia": ">=5.4.5 <6.0.0"
   },
   "devDependencies": {
-    "@nestia/e2e": "^0.3.7",
-    "@nestjs/common": ">= 7.0.1",
-    "@nestjs/core": ">= 7.0.1",
+    "@nestia/e2e": "^0.4.1",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/cli": "^0.11.21",
     "@types/express": "^4.17.15",
     "@types/glob": "^7.2.0",
     "@types/node": "^18.11.15",
-    "@types/reflect-metadata": "^0.1.0",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
     "eslint": "^8.29.0",
     "eslint-plugin-deprecation": "^1.4.1",
-    "prettier": "^3.2.4",
     "rimraf": "^3.0.2",
-    "ts-node": "^10.9.1",
     "ts-patch": "v3.0.2",
     "typescript": "^5.3.2",
     "typescript-transform-paths": "^3.4.4",
